<!--
    Codebits
    Copyright (C) 2012 Henrique Rocha <hmrocha@gmail.com>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>. 
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/talk_background"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/talk_card_size"
    android:layout_margin="@dimen/padding_small"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_medium" >

        <TextView
            android:id="@+id/talk_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_medium"
            android:background="@drawable/rounded_bg"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingBottom="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_small"
            android:text="@string/example_talk_title"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_medium" >

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginLeft="@dimen/padding_medium"
            android:src="@drawable/luis_correia" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_medium" >

            <TextView
                android:id="@+id/talk_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/example_talk_author"
                android:textColor="@color/dark_green"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/talk_votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/talk_author"
                android:text="@string/example_talk_votes"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/talk_author"
                android:layout_toRightOf="@+id/talk_votes"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/votes"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/talk_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/talk_votes"
                android:paddingRight="3dp"
                android:text="@string/example_talk_unrated"
                android:textColor="@color/red_unrated" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/talk_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:text="Bla bla bla whiskas saquetas"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>